...
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHint"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKeyPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:inputType="textPassword" />

...
                        android:gravity="center"
                        tools:text="WEAK (average time to crack: 13 seconds)" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSetPassPhrase"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/default_margin_content_big"
                    android:text="@string/set_pass_phrase"
                    android:theme="@style/AppWidget.Button.SilverWithWhiteText"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
...
                    app:layout_constraintStart_toStartOf="@+id/guidelineLeftSecond"
                    app:layout_constraintTop_toBottomOf="@+id/layoutPasswordHintSecond"
                    app:passwordToggleContentDescription="description"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextKeyPasswordSecond"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:ems="10"
                        android:inputType="textPassword" />

...
                        android:gravity="center"
                        android:visibility="invisible" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonConfirmPassPhrases"
                    style="@style/AppWidget.Button"
                    android:layout_width="0dp"
                    android:layout_marginTop="@dimen/default_margin_content_big"
                    android:text="@string/confirm_pass_phrase"
                    android:theme="@style/AppWidget.Button.Green"
                    app:layout_constraintEnd_toStartOf="@+id/guidelineRightSecond"
...
