<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:padding="@dimen/default_margin_content">

        <TextView
            android:id="@+id/textViewAccountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_info"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAccountInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUsername"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutUsername"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewIncomingEmailSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_huge"
            android:text="@string/incoming_mail_settings"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutImapServer"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/imap_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIncomingEmailSettings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutImapPort"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/imap_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutImapServer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSecurityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerImapSecurityType"
            app:layout_constraintStart_toStartOf="@+id/layoutImapPort"
            app:layout_constraintTop_toTopOf="@+id/spinnerImapSecurityType" />

        <Spinner
            android:id="@+id/spinnerImapSecurityType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_content_small"
            android:layout_marginTop="@dimen/default_margin_content_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewSecurityType"
            app:layout_constraintTop_toBottomOf="@+id/layoutImapPort" />

        <TextView
            android:id="@+id/textViewOutgoingEmailSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_huge"
            android:text="@string/outgoing_mail_settings"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerImapSecurityType" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSmtpServer"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/smtp_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOutgoingEmailSettings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSmtpPort"
            style="@style/AppWidget.TextInputLayout.GreyBottomLine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:hint="@string/smtp_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSmtpServer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewSmtpSecurityType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/security_type"
            app:layout_constraintBottom_toBottomOf="@+id/spinnerSmtpSecyrityType"
            app:layout_constraintStart_toStartOf="@+id/layoutSmtpPort"
            app:layout_constraintTop_toTopOf="@+id/spinnerSmtpSecyrityType" />

        <Spinner
            android:id="@+id/spinnerSmtpSecyrityType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_content_small"
            android:layout_marginTop="@dimen/default_margin_content_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewSmtpSecurityType"
            app:layout_constraintTop_toBottomOf="@+id/layoutSmtpPort" />

        <CheckBox
            android:id="@+id/checkBoxRequireSignInForSmtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_content_small"
            android:text="@string/require_custom_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinnerSmtpSecyrityType" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSmtpSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBoxRequireSignInForSmtp"
            tools:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSmtpUserName"
                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:hint="@string/smtp_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailSubject"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSmtpPassword"
                style="@style/AppWidget.TextInputLayout.GreyBottomLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_content_small"
                android:hint="@string/smtp_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutSmtpUserName"
                app:passwordToggleContentDescription="description"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_medium" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonTryToConnect"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:text="@string/try_to_connect"
            android:theme="@style/AppWidget.Button.Green"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSmtpSignIn" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>