...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Set up FlowCrypt" />

        <Button
            android:id="@+id/buttonCreateNewKey"
            style="@style/AppWidget.Button.Big"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/first_button_padding"
            android:text="@string/create_a_new_key"
            app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

        <Button
...
