...
        app:layout_constraintVertical_bias="0.35"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonOtherEmailProvider"
        style="@style/AppWidget.Button.White.ConnectAccount"
        android:layout_marginTop="@dimen/default_margin_big"
        android:drawableStart="@mipmap/ic_email"
        android:text="@string/other_email_provider"
        android:theme="@style/AppWidget.Button.White.ConnectAccount"
        app:layout_constraintEnd_toEndOf="parent"
...
